fix deploy list text overlap

--- a/src/components/Deploy/styles.module.css
+++ b/src/components/Deploy/styles.module.css
@@ -57,6 +57,7 @@
 .project span {
   font-size: 1rem;
   margin-right: 0.5rem;
+  line-height: 1.5;
 }
 
 .head span {
